@@ -24,6 +24,7 @@
             <port>3128</port>
             <username>foo</username>
             <password>bar</password>
+            <nonProxyHosts>internal-host</nonProxyHosts>
         </proxy>
         <proxy>
             <active>false</active>
